refactor: optimize pom, use Slf4j